package com.tfg.psychiatrist;

public enum Roles {
    ADMIN,
    USER,
    AUDITOR
}
